--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@
 
 # Go workspace file
 go.work
+
+# Following patterns added from original go-clean-arch repository
+vendor/
+article_clean
+_*
+*.test
+.DS_Store
+engine
+bin/
+*.out
