--- a/.air.toml
+++ b/.air.toml
@@ -1,38 +1,51 @@
-# Config file for [Air](https://github.com/cosmtrek/air) in TOML format
-
-# Working directory
-# . or absolute path, please note that the directories following must be under root
-root = "./cmd"
-tmp_dir = "tmp"
+root = "."
+testdata_dir = "testdata"
+tmp_dir = "cmd/tmp"
 
 [build]
-# Just plain old shell command. You could use `make` as well.
-cmd = "go build -o ./cmd/tmp/positron ./cmd/positron/."
-# Binary file yields from `cmd`.
-bin = "tmp/positron"
-# Customize binary.
-full_bin = "./cmd/tmp/positron"
-# This log file places in your tmp_dir.
-log = "air_errors.log"
-# Watch these filename extensions.
-include_ext = ["go", "yaml", "toml"]
-# Ignore these filename extensions or directories.
-exclude_dir = ["tmp", "tmp"]
-# It's not necessary to trigger build each time file changes if it's too frequent.
-delay = 1000 # ms
-
-[log]
-# Show log time
-time = true
+  args_bin = []
+  bin = "./cmd/tmp/positron"
+  cmd = "go build -o ./cmd/tmp/positron ./cmd/positron"
+  delay = 1000
+  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_file = []
+  exclude_regex = ["_test.go"]
+  exclude_unchanged = false
+  follow_symlink = false
+  full_bin = ""
+  include_dir = []
+  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_file = []
+  kill_delay = "0s"
+  log = "build-errors.log"
+  poll = false
+  poll_interval = 0
+  post_cmd = []
+  pre_cmd = []
+  rerun = false
+  rerun_delay = 500
+  send_interrupt = false
+  stop_on_error = false
 
 [color]
-# Customize each part's color. If no color found, use the raw app log.
-main = "magenta"
-watcher = "cyan"
-build = "yellow"
-runner = "green"
+  app = ""
+  build = "yellow"
+  main = "magenta"
+  runner = "green"
+  watcher = "cyan"
+
+[log]
+  main_only = false
+  time = false
 
 [misc]
-# Delete tmp directory on exit
-clean_on_exit = true
+  clean_on_exit = false
 
+[proxy]
+  app_port = 0
+  enabled = false
+  proxy_port = 0
+
+[screen]
+  clear_on_rebuild = false
+  keep_scroll = true
